Fixed an alignment issue in 'V2/'.

--- a/V2/index.css
+++ b/V2/index.css
@@ -60,6 +60,7 @@
 
 .left .image {
         left: 50%;
+	transform: translate(-10px, 0px);
 }
 
 .left .text {
